# pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml
pipeline/: utils.py
utils/: general.py  health.py  hugginface.py  model.py
